--- a/aboutus.html
+++ b/aboutus.html
@@ -36,7 +36,7 @@
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/100/three.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.0.3/chroma.min.js'></script><script  src="./main.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.0.3/chroma.min.js'></script><script  src="./index.js"></script>
 
 </body>
 </html>
