--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,8 @@
             ABOUT US
         </h1>
         <p class="cover-container d-flex p-3 mx-auto flex-column flex-row"> 
-            We need to write shit here
+            The NFTs are all completely made using Benjamin Davis' original art. Countless hours were spent refining the attributes, resulting in memorable, eye-catching, wonderous cans of fizz. Ben is an art student in Washington State. Supporting our NFTs also supports the indie art industry. Good work Ben. 
+            Connor Goodman and Tom Burniston are the brains behind the operation. Connor is a Computer Science Major and Tom is a pure Math major. They generated the nfts, created the website, and created the logic making this nft so memorable. Both have an extreme passion of putting the power back into the people's hands. Web 3.0 is a must in their opinions. Great work Connor and Tom!
         </p>
         
       </main>
